# DesignerlyAlgorithmicPrototyping

./: .buildinfo  0. introjupy.html  1. Collecting relevant data.html  2. Labeling, structuring and visualizing.html  2. Structuring and visualizing.html  2.1. Labeling and structuring the data.html  2.2. Visualizing the data.html  3. Assigning weights.html  4. Generating and filtering.html  Algorithm_4ITEMS_HH2.html  Collecting the data.html  DataPrep.html  README.md  genindex.html  index.html  intro.html  introjupy.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
Jupyterbook/: 3. Assigning weights.ipynb  4. Generating and filtering.ipynb  _toc.yml
Notebooks/: 1. Collecting relevant data.html  2. Structuring and visualizing.html  3. Structuring and visualizing.html  Collecting the data.html
_sources/: 0. introjupy.ipynb  1. Collecting relevant data.ipynb  2.2. Visualizing the data.ipynb  3. Assigning weights.ipynb  4. Generating and filtering.ipynb  Algorithm_2STORE_HH2.ipynb  Algorithm_3TIME_HH2.ipynb  Algorithm_COUNTS_HH2.ipynb  intro.md  introjupy.ipynb  markdown.md
database/: DATA-HH (dummy).csv  DATA-HH (dummy).xlsx  DATA-HH (dummy-orders).csv  Groceries_onehousehold.csv  Groceries_onehousehold.xlsx  Groceries_onehousehold1.csv  df_HH1(Fridays).csv  df_HH1(Mondays).csv  df_HH1(Saturdays).csv  df_HH1(Sundays).csv  df_HH1(Thursdays).csv  df_HH1(Tuesdays).csv  df_HH1(Wednesdays).csv  df_HH1_FrTime.csv  df_HH1_MoTime.csv  df_HH1_SaTime.csv  df_HH1_SuTime.csv  df_HH1_ThTime.csv  df_HH1_WeTime.csv  df_HH1_weekendstore.csv  (+2 more)
(+163 files in other folders)
