[tool.poetry]
name = "designerlyalgorithmicprototyping"
version = "0.1.0"
description = ""
authors = ["EMV <104364594+AnonymousNotebooks@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
polars = "^0.20.31"
altair = "^5.3.0"
plotly = "^5.22.0"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
